# libov

./: .gitignore  .gitmodules  CMakeLists.txt
src/: ov_client_digitalstage_t.cc  ov_ds_config.cc  ov_ds_config.h  ov_ds_sockethandler_t.cc  ov_ds_sockethandler_t.h  ovboxclient.cc  soundcardtools.cc  soundcardtools.h
unittests/: CMakeLists.txt  dsconfig.cc
